started on auth controller, register mostly done

--- a/api.fakebook/appsettings.json
+++ b/api.fakebook/appsettings.json
@@ -5,6 +5,10 @@
 
   },
 
+  "JWT": {
+    "ValidIssuer": "https://localhost:44322",
+    "Secret": "WDS#4saw2gsz£$aszNDROsZfGHG#!azL"
+  },
 
   "Logging": {
     "LogLevel": {
@@ -14,4 +18,6 @@
     }
   },
   "AllowedHosts": "*"
+
+  
 }
